k8s/apps/schwab/go-schwab-auth/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: go-schwab-auth
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`schwab-auth.chalupatech.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: go-schwab-auth
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: go-schwab-auth-tls
  annotations:
    external-dns.alpha.kubernetes.io/target: "dpi2.tailbecff0.ts.net"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`schwab-auth.chalupatech.com`)
      kind: Rule
      services:
        - name: go-schwab-auth
          port: 8080
  tls:
    secretName: schwab-auth-tls
